parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM IDENTIFICADOR PONTOV bloco PONTO
Rule 2     bloco -> secao_declara_vars_opt secao_declara_subrotinas comando_composto
Rule 3     secao_declara_vars_opt -> VAR declaracao_vars_lista
Rule 4     secao_declara_vars_opt -> empty
Rule 5     declaracao_vars_lista -> declaracao_vars_lista declaracao_vars PONTOV
Rule 6     declaracao_vars_lista -> declaracao_vars PONTOV
Rule 7     declaracao_vars -> lista_ids DOISP tipo
Rule 8     lista_ids -> lista_ids VIRG IDENTIFICADOR
Rule 9     lista_ids -> IDENTIFICADOR
Rule 10    tipo -> TIPO_INTEIRO
Rule 11    tipo -> TIPO_BOLEANO
Rule 12    secao_declara_subrotinas -> secao_declara_subrotinas declaracao_subrotina PONTOV
Rule 13    secao_declara_subrotinas -> empty
Rule 14    declaracao_subrotina -> declaracao_procedimento
Rule 15    declaracao_subrotina -> declaracao_funcao
Rule 16    declaracao_procedimento -> PROCEDURE IDENTIFICADOR parametros_formais_opt PONTOV bloco_subrot
Rule 17    declaracao_funcao -> FUNCTION IDENTIFICADOR parametros_formais_opt DOISP tipo PONTOV bloco_subrot
Rule 18    bloco_subrot -> secao_declara_vars_opt comando_composto
Rule 19    parametros_formais_opt -> parametros_formais
Rule 20    parametros_formais_opt -> empty
Rule 21    parametros_formais -> PARE lista_parametros PARD
Rule 22    lista_parametros -> lista_parametros PONTOV declaracao_parametros
Rule 23    lista_parametros -> declaracao_parametros
Rule 24    declaracao_parametros -> lista_ids DOISP tipo
Rule 25    comando_composto -> BEGIN comando_lista_opt END
Rule 26    comando_lista_opt -> comando_lista
Rule 27    comando_lista_opt -> empty
Rule 28    comando_lista -> comando_lista PONTOV comando
Rule 29    comando_lista -> comando
Rule 30    comando -> atribuicao
Rule 31    comando -> chamada_procedimento
Rule 32    comando -> condicional
Rule 33    comando -> repeticao
Rule 34    comando -> escrita
Rule 35    comando -> leitura
Rule 36    comando -> comando_composto
Rule 37    atribuicao -> IDENTIFICADOR ATRIB expressao
Rule 38    chamada_procedimento -> IDENTIFICADOR PARE lista_expressoes_opt PARD
Rule 39    condicional -> IF expressao THEN comando
Rule 40    condicional -> IF expressao THEN comando ELSE comando
Rule 41    repeticao -> WHILE expressao DO comando
Rule 42    escrita -> WRITE PARE lista_expressoes PARD
Rule 43    leitura -> READ PARE lista_ids PARD
Rule 44    lista_expressoes_opt -> lista_expressoes
Rule 45    lista_expressoes_opt -> empty
Rule 46    lista_expressoes -> lista_expressoes VIRG expressao
Rule 47    lista_expressoes -> expressao
Rule 48    expressao -> expressao_simples relacao expressao_simples
Rule 49    expressao -> expressao_simples
Rule 50    relacao -> IGUAL
Rule 51    relacao -> DIF
Rule 52    relacao -> MENOR
Rule 53    relacao -> MENORIG
Rule 54    relacao -> MAIOR
Rule 55    relacao -> MAIORIG
Rule 56    expressao_simples -> expressao_simples MAIS termo
Rule 57    expressao_simples -> expressao_simples MENOS termo
Rule 58    expressao_simples -> expressao_simples OR termo
Rule 59    expressao_simples -> termo
Rule 60    termo -> termo VEZES fator
Rule 61    termo -> termo DIV fator
Rule 62    termo -> termo AND fator
Rule 63    termo -> fator
Rule 64    fator -> variavel
Rule 65    fator -> chamada_funcao
Rule 66    fator -> NUMERO
Rule 67    fator -> logico
Rule 68    fator -> PARE expressao PARD
Rule 69    fator -> NOT fator
Rule 70    fator -> MENOS fator
Rule 71    logico -> TRUE
Rule 72    logico -> FALSE
Rule 73    variavel -> IDENTIFICADOR
Rule 74    chamada_funcao -> IDENTIFICADOR PARE lista_expressoes_opt PARD
Rule 75    empty -> <empty>

Terminals, with rules where they appear

AND                  : 62
ATRIB                : 37
BEGIN                : 25
DIF                  : 51
DIV                  : 61
DO                   : 41
DOISP                : 7 17 24
ELSE                 : 40
END                  : 25
FALSE                : 72
FUNCTION             : 17
IDENTIFICADOR        : 1 8 9 16 17 37 38 73 74
IF                   : 39 40
IGUAL                : 50
MAIOR                : 54
MAIORIG              : 55
MAIS                 : 56
MENOR                : 52
MENORIG              : 53
MENOS                : 57 70
NOT                  : 69
NUMERO               : 66
OR                   : 58
PARD                 : 21 38 42 43 68 74
PARE                 : 21 38 42 43 68 74
PONTO                : 1
PONTOV               : 1 5 6 12 16 17 22 28
PROCEDURE            : 16
PROGRAM              : 1
READ                 : 43
THEN                 : 39 40
TIPO_BOLEANO         : 11
TIPO_INTEIRO         : 10
TRUE                 : 71
VAR                  : 3
VEZES                : 60
VIRG                 : 8 46
WHILE                : 41
WRITE                : 42
error                : 

Nonterminals, with rules where they appear

atribuicao           : 30
bloco                : 1
bloco_subrot         : 16 17
chamada_funcao       : 65
chamada_procedimento : 31
comando              : 28 29 39 40 40 41
comando_composto     : 2 18 36
comando_lista        : 26 28
comando_lista_opt    : 25
condicional          : 32
declaracao_funcao    : 15
declaracao_parametros : 22 23
declaracao_procedimento : 14
declaracao_subrotina : 12
declaracao_vars      : 5 6
declaracao_vars_lista : 3 5
empty                : 4 13 20 27 45
escrita              : 34
expressao            : 37 39 40 41 46 47 68
expressao_simples    : 48 48 49 56 57 58
fator                : 60 61 62 63 69 70
leitura              : 35
lista_expressoes     : 42 44 46
lista_expressoes_opt : 38 74
lista_ids            : 7 8 24 43
lista_parametros     : 21 22
logico               : 67
parametros_formais   : 19
parametros_formais_opt : 16 17
programa             : 0
relacao              : 48
repeticao            : 33
secao_declara_subrotinas : 2 12
secao_declara_vars_opt : 2 18
termo                : 56 57 58 59 60 61 62
tipo                 : 7 17 24
variavel             : 64

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM IDENTIFICADOR PONTOV bloco PONTO

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . IDENTIFICADOR PONTOV bloco PONTO

    IDENTIFICADOR   shift and go to state 3


state 3

    (1) programa -> PROGRAM IDENTIFICADOR . PONTOV bloco PONTO

    PONTOV          shift and go to state 4


state 4

    (1) programa -> PROGRAM IDENTIFICADOR PONTOV . bloco PONTO
    (2) bloco -> . secao_declara_vars_opt secao_declara_subrotinas comando_composto
    (3) secao_declara_vars_opt -> . VAR declaracao_vars_lista
    (4) secao_declara_vars_opt -> . empty
    (75) empty -> .

    VAR             shift and go to state 7
    BEGIN           reduce using rule 75 (empty -> .)
    PROCEDURE       reduce using rule 75 (empty -> .)
    FUNCTION        reduce using rule 75 (empty -> .)

    bloco                          shift and go to state 5
    secao_declara_vars_opt         shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) programa -> PROGRAM IDENTIFICADOR PONTOV bloco . PONTO

    PONTO           shift and go to state 9


state 6

    (2) bloco -> secao_declara_vars_opt . secao_declara_subrotinas comando_composto
    (12) secao_declara_subrotinas -> . secao_declara_subrotinas declaracao_subrotina PONTOV
    (13) secao_declara_subrotinas -> . empty
    (75) empty -> .

    BEGIN           reduce using rule 75 (empty -> .)
    PROCEDURE       reduce using rule 75 (empty -> .)
    FUNCTION        reduce using rule 75 (empty -> .)

    secao_declara_subrotinas       shift and go to state 10
    empty                          shift and go to state 11

state 7

    (3) secao_declara_vars_opt -> VAR . declaracao_vars_lista
    (5) declaracao_vars_lista -> . declaracao_vars_lista declaracao_vars PONTOV
    (6) declaracao_vars_lista -> . declaracao_vars PONTOV
    (7) declaracao_vars -> . lista_ids DOISP tipo
    (8) lista_ids -> . lista_ids VIRG IDENTIFICADOR
    (9) lista_ids -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 15

    declaracao_vars_lista          shift and go to state 12
    declaracao_vars                shift and go to state 13
    lista_ids                      shift and go to state 14

state 8

    (4) secao_declara_vars_opt -> empty .

    BEGIN           reduce using rule 4 (secao_declara_vars_opt -> empty .)
    PROCEDURE       reduce using rule 4 (secao_declara_vars_opt -> empty .)
    FUNCTION        reduce using rule 4 (secao_declara_vars_opt -> empty .)


state 9

    (1) programa -> PROGRAM IDENTIFICADOR PONTOV bloco PONTO .

    $end            reduce using rule 1 (programa -> PROGRAM IDENTIFICADOR PONTOV bloco PONTO .)


state 10

    (2) bloco -> secao_declara_vars_opt secao_declara_subrotinas . comando_composto
    (12) secao_declara_subrotinas -> secao_declara_subrotinas . declaracao_subrotina PONTOV
    (25) comando_composto -> . BEGIN comando_lista_opt END
    (14) declaracao_subrotina -> . declaracao_procedimento
    (15) declaracao_subrotina -> . declaracao_funcao
    (16) declaracao_procedimento -> . PROCEDURE IDENTIFICADOR parametros_formais_opt PONTOV bloco_subrot
    (17) declaracao_funcao -> . FUNCTION IDENTIFICADOR parametros_formais_opt DOISP tipo PONTOV bloco_subrot

    BEGIN           shift and go to state 18
    PROCEDURE       shift and go to state 21
    FUNCTION        shift and go to state 22

    comando_composto               shift and go to state 16
    declaracao_subrotina           shift and go to state 17
    declaracao_procedimento        shift and go to state 19
    declaracao_funcao              shift and go to state 20

state 11

    (13) secao_declara_subrotinas -> empty .

    BEGIN           reduce using rule 13 (secao_declara_subrotinas -> empty .)
    PROCEDURE       reduce using rule 13 (secao_declara_subrotinas -> empty .)
    FUNCTION        reduce using rule 13 (secao_declara_subrotinas -> empty .)


state 12

    (3) secao_declara_vars_opt -> VAR declaracao_vars_lista .
    (5) declaracao_vars_lista -> declaracao_vars_lista . declaracao_vars PONTOV
    (7) declaracao_vars -> . lista_ids DOISP tipo
    (8) lista_ids -> . lista_ids VIRG IDENTIFICADOR
    (9) lista_ids -> . IDENTIFICADOR

    BEGIN           reduce using rule 3 (secao_declara_vars_opt -> VAR declaracao_vars_lista .)
    PROCEDURE       reduce using rule 3 (secao_declara_vars_opt -> VAR declaracao_vars_lista .)
    FUNCTION        reduce using rule 3 (secao_declara_vars_opt -> VAR declaracao_vars_lista .)
    IDENTIFICADOR   shift and go to state 15

    declaracao_vars                shift and go to state 23
    lista_ids                      shift and go to state 14

state 13

    (6) declaracao_vars_lista -> declaracao_vars . PONTOV

    PONTOV          shift and go to state 24


state 14

    (7) declaracao_vars -> lista_ids . DOISP tipo
    (8) lista_ids -> lista_ids . VIRG IDENTIFICADOR

    DOISP           shift and go to state 25
    VIRG            shift and go to state 26


state 15

    (9) lista_ids -> IDENTIFICADOR .

    DOISP           reduce using rule 9 (lista_ids -> IDENTIFICADOR .)
    VIRG            reduce using rule 9 (lista_ids -> IDENTIFICADOR .)
    PARD            reduce using rule 9 (lista_ids -> IDENTIFICADOR .)


state 16

    (2) bloco -> secao_declara_vars_opt secao_declara_subrotinas comando_composto .

    PONTO           reduce using rule 2 (bloco -> secao_declara_vars_opt secao_declara_subrotinas comando_composto .)


state 17

    (12) secao_declara_subrotinas -> secao_declara_subrotinas declaracao_subrotina . PONTOV

    PONTOV          shift and go to state 27


state 18

    (25) comando_composto -> BEGIN . comando_lista_opt END
    (26) comando_lista_opt -> . comando_lista
    (27) comando_lista_opt -> . empty
    (28) comando_lista -> . comando_lista PONTOV comando
    (29) comando_lista -> . comando
    (75) empty -> .
    (30) comando -> . atribuicao
    (31) comando -> . chamada_procedimento
    (32) comando -> . condicional
    (33) comando -> . repeticao
    (34) comando -> . escrita
    (35) comando -> . leitura
    (36) comando -> . comando_composto
    (37) atribuicao -> . IDENTIFICADOR ATRIB expressao
    (38) chamada_procedimento -> . IDENTIFICADOR PARE lista_expressoes_opt PARD
    (39) condicional -> . IF expressao THEN comando
    (40) condicional -> . IF expressao THEN comando ELSE comando
    (41) repeticao -> . WHILE expressao DO comando
    (42) escrita -> . WRITE PARE lista_expressoes PARD
    (43) leitura -> . READ PARE lista_ids PARD
    (25) comando_composto -> . BEGIN comando_lista_opt END

    END             reduce using rule 75 (empty -> .)
    IDENTIFICADOR   shift and go to state 39
    IF              shift and go to state 40
    WHILE           shift and go to state 41
    WRITE           shift and go to state 42
    READ            shift and go to state 43
    BEGIN           shift and go to state 18

    comando_lista_opt              shift and go to state 28
    comando_lista                  shift and go to state 29
    empty                          shift and go to state 30
    comando                        shift and go to state 31
    atribuicao                     shift and go to state 32
    chamada_procedimento           shift and go to state 33
    condicional                    shift and go to state 34
    repeticao                      shift and go to state 35
    escrita                        shift and go to state 36
    leitura                        shift and go to state 37
    comando_composto               shift and go to state 38

state 19

    (14) declaracao_subrotina -> declaracao_procedimento .

    PONTOV          reduce using rule 14 (declaracao_subrotina -> declaracao_procedimento .)


state 20

    (15) declaracao_subrotina -> declaracao_funcao .

    PONTOV          reduce using rule 15 (declaracao_subrotina -> declaracao_funcao .)


state 21

    (16) declaracao_procedimento -> PROCEDURE . IDENTIFICADOR parametros_formais_opt PONTOV bloco_subrot

    IDENTIFICADOR   shift and go to state 44


state 22

    (17) declaracao_funcao -> FUNCTION . IDENTIFICADOR parametros_formais_opt DOISP tipo PONTOV bloco_subrot

    IDENTIFICADOR   shift and go to state 45


state 23

    (5) declaracao_vars_lista -> declaracao_vars_lista declaracao_vars . PONTOV

    PONTOV          shift and go to state 46


state 24

    (6) declaracao_vars_lista -> declaracao_vars PONTOV .

    IDENTIFICADOR   reduce using rule 6 (declaracao_vars_lista -> declaracao_vars PONTOV .)
    BEGIN           reduce using rule 6 (declaracao_vars_lista -> declaracao_vars PONTOV .)
    PROCEDURE       reduce using rule 6 (declaracao_vars_lista -> declaracao_vars PONTOV .)
    FUNCTION        reduce using rule 6 (declaracao_vars_lista -> declaracao_vars PONTOV .)


state 25

    (7) declaracao_vars -> lista_ids DOISP . tipo
    (10) tipo -> . TIPO_INTEIRO
    (11) tipo -> . TIPO_BOLEANO

    TIPO_INTEIRO    shift and go to state 48
    TIPO_BOLEANO    shift and go to state 49

    tipo                           shift and go to state 47

state 26

    (8) lista_ids -> lista_ids VIRG . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 50


state 27

    (12) secao_declara_subrotinas -> secao_declara_subrotinas declaracao_subrotina PONTOV .

    BEGIN           reduce using rule 12 (secao_declara_subrotinas -> secao_declara_subrotinas declaracao_subrotina PONTOV .)
    PROCEDURE       reduce using rule 12 (secao_declara_subrotinas -> secao_declara_subrotinas declaracao_subrotina PONTOV .)
    FUNCTION        reduce using rule 12 (secao_declara_subrotinas -> secao_declara_subrotinas declaracao_subrotina PONTOV .)


state 28

    (25) comando_composto -> BEGIN comando_lista_opt . END

    END             shift and go to state 51


state 29

    (26) comando_lista_opt -> comando_lista .
    (28) comando_lista -> comando_lista . PONTOV comando

    END             reduce using rule 26 (comando_lista_opt -> comando_lista .)
    PONTOV          shift and go to state 52


state 30

    (27) comando_lista_opt -> empty .

    END             reduce using rule 27 (comando_lista_opt -> empty .)


state 31

    (29) comando_lista -> comando .

    PONTOV          reduce using rule 29 (comando_lista -> comando .)
    END             reduce using rule 29 (comando_lista -> comando .)


state 32

    (30) comando -> atribuicao .

    PONTOV          reduce using rule 30 (comando -> atribuicao .)
    END             reduce using rule 30 (comando -> atribuicao .)
    ELSE            reduce using rule 30 (comando -> atribuicao .)


state 33

    (31) comando -> chamada_procedimento .

    PONTOV          reduce using rule 31 (comando -> chamada_procedimento .)
    END             reduce using rule 31 (comando -> chamada_procedimento .)
    ELSE            reduce using rule 31 (comando -> chamada_procedimento .)


state 34

    (32) comando -> condicional .

    PONTOV          reduce using rule 32 (comando -> condicional .)
    END             reduce using rule 32 (comando -> condicional .)
    ELSE            reduce using rule 32 (comando -> condicional .)


state 35

    (33) comando -> repeticao .

    PONTOV          reduce using rule 33 (comando -> repeticao .)
    END             reduce using rule 33 (comando -> repeticao .)
    ELSE            reduce using rule 33 (comando -> repeticao .)


state 36

    (34) comando -> escrita .

    PONTOV          reduce using rule 34 (comando -> escrita .)
    END             reduce using rule 34 (comando -> escrita .)
    ELSE            reduce using rule 34 (comando -> escrita .)


state 37

    (35) comando -> leitura .

    PONTOV          reduce using rule 35 (comando -> leitura .)
    END             reduce using rule 35 (comando -> leitura .)
    ELSE            reduce using rule 35 (comando -> leitura .)


state 38

    (36) comando -> comando_composto .

    PONTOV          reduce using rule 36 (comando -> comando_composto .)
    END             reduce using rule 36 (comando -> comando_composto .)
    ELSE            reduce using rule 36 (comando -> comando_composto .)


state 39

    (37) atribuicao -> IDENTIFICADOR . ATRIB expressao
    (38) chamada_procedimento -> IDENTIFICADOR . PARE lista_expressoes_opt PARD

    ATRIB           shift and go to state 53
    PARE            shift and go to state 54


state 40

    (39) condicional -> IF . expressao THEN comando
    (40) condicional -> IF . expressao THEN comando ELSE comando
    (48) expressao -> . expressao_simples relacao expressao_simples
    (49) expressao -> . expressao_simples
    (56) expressao_simples -> . expressao_simples MAIS termo
    (57) expressao_simples -> . expressao_simples MENOS termo
    (58) expressao_simples -> . expressao_simples OR termo
    (59) expressao_simples -> . termo
    (60) termo -> . termo VEZES fator
    (61) termo -> . termo DIV fator
    (62) termo -> . termo AND fator
    (63) termo -> . fator
    (64) fator -> . variavel
    (65) fator -> . chamada_funcao
    (66) fator -> . NUMERO
    (67) fator -> . logico
    (68) fator -> . PARE expressao PARD
    (69) fator -> . NOT fator
    (70) fator -> . MENOS fator
    (73) variavel -> . IDENTIFICADOR
    (74) chamada_funcao -> . IDENTIFICADOR PARE lista_expressoes_opt PARD
    (71) logico -> . TRUE
    (72) logico -> . FALSE

    NUMERO          shift and go to state 62
    PARE            shift and go to state 64
    NOT             shift and go to state 65
    MENOS           shift and go to state 58
    IDENTIFICADOR   shift and go to state 66
    TRUE            shift and go to state 67
    FALSE           shift and go to state 68

    expressao                      shift and go to state 55
    expressao_simples              shift and go to state 56
    termo                          shift and go to state 57
    fator                          shift and go to state 59
    variavel                       shift and go to state 60
    chamada_funcao                 shift and go to state 61
    logico                         shift and go to state 63

state 41

    (41) repeticao -> WHILE . expressao DO comando
    (48) expressao -> . expressao_simples relacao expressao_simples
    (49) expressao -> . expressao_simples
    (56) expressao_simples -> . expressao_simples MAIS termo
    (57) expressao_simples -> . expressao_simples MENOS termo
    (58) expressao_simples -> . expressao_simples OR termo
    (59) expressao_simples -> . termo
    (60) termo -> . termo VEZES fator
    (61) termo -> . termo DIV fator
    (62) termo -> . termo AND fator
    (63) termo -> . fator
    (64) fator -> . variavel
    (65) fator -> . chamada_funcao
    (66) fator -> . NUMERO
    (67) fator -> . logico
    (68) fator -> . PARE expressao PARD
    (69) fator -> . NOT fator
    (70) fator -> . MENOS fator
    (73) variavel -> . IDENTIFICADOR
    (74) chamada_funcao -> . IDENTIFICADOR PARE lista_expressoes_opt PARD
    (71) logico -> . TRUE
    (72) logico -> . FALSE

    NUMERO          shift and go to state 62
    PARE            shift and go to state 64
    NOT             shift and go to state 65
    MENOS           shift and go to state 58
    IDENTIFICADOR   shift and go to state 66
    TRUE            shift and go to state 67
    FALSE           shift and go to state 68

    expressao                      shift and go to state 69
    expressao_simples              shift and go to state 56
    termo                          shift and go to state 57
    fator                          shift and go to state 59
    variavel                       shift and go to state 60
    chamada_funcao                 shift and go to state 61
    logico                         shift and go to state 63

state 42

    (42) escrita -> WRITE . PARE lista_expressoes PARD

    PARE            shift and go to state 70


state 43

    (43) leitura -> READ . PARE lista_ids PARD

    PARE            shift and go to state 71


state 44

    (16) declaracao_procedimento -> PROCEDURE IDENTIFICADOR . parametros_formais_opt PONTOV bloco_subrot
    (19) parametros_formais_opt -> . parametros_formais
    (20) parametros_formais_opt -> . empty
    (21) parametros_formais -> . PARE lista_parametros PARD
    (75) empty -> .

    PARE            shift and go to state 75
    PONTOV          reduce using rule 75 (empty -> .)

    parametros_formais_opt         shift and go to state 72
    parametros_formais             shift and go to state 73
    empty                          shift and go to state 74

state 45

    (17) declaracao_funcao -> FUNCTION IDENTIFICADOR . parametros_formais_opt DOISP tipo PONTOV bloco_subrot
    (19) parametros_formais_opt -> . parametros_formais
    (20) parametros_formais_opt -> . empty
    (21) parametros_formais -> . PARE lista_parametros PARD
    (75) empty -> .

    PARE            shift and go to state 75
    DOISP           reduce using rule 75 (empty -> .)

    parametros_formais_opt         shift and go to state 76
    parametros_formais             shift and go to state 73
    empty                          shift and go to state 74

state 46

    (5) declaracao_vars_lista -> declaracao_vars_lista declaracao_vars PONTOV .

    IDENTIFICADOR   reduce using rule 5 (declaracao_vars_lista -> declaracao_vars_lista declaracao_vars PONTOV .)
    BEGIN           reduce using rule 5 (declaracao_vars_lista -> declaracao_vars_lista declaracao_vars PONTOV .)
    PROCEDURE       reduce using rule 5 (declaracao_vars_lista -> declaracao_vars_lista declaracao_vars PONTOV .)
    FUNCTION        reduce using rule 5 (declaracao_vars_lista -> declaracao_vars_lista declaracao_vars PONTOV .)


state 47

    (7) declaracao_vars -> lista_ids DOISP tipo .

    PONTOV          reduce using rule 7 (declaracao_vars -> lista_ids DOISP tipo .)


state 48

    (10) tipo -> TIPO_INTEIRO .

    PONTOV          reduce using rule 10 (tipo -> TIPO_INTEIRO .)
    PARD            reduce using rule 10 (tipo -> TIPO_INTEIRO .)


state 49

    (11) tipo -> TIPO_BOLEANO .

    PONTOV          reduce using rule 11 (tipo -> TIPO_BOLEANO .)
    PARD            reduce using rule 11 (tipo -> TIPO_BOLEANO .)


state 50

    (8) lista_ids -> lista_ids VIRG IDENTIFICADOR .

    DOISP           reduce using rule 8 (lista_ids -> lista_ids VIRG IDENTIFICADOR .)
    VIRG            reduce using rule 8 (lista_ids -> lista_ids VIRG IDENTIFICADOR .)
    PARD            reduce using rule 8 (lista_ids -> lista_ids VIRG IDENTIFICADOR .)


state 51

    (25) comando_composto -> BEGIN comando_lista_opt END .

    PONTO           reduce using rule 25 (comando_composto -> BEGIN comando_lista_opt END .)
    PONTOV          reduce using rule 25 (comando_composto -> BEGIN comando_lista_opt END .)
    END             reduce using rule 25 (comando_composto -> BEGIN comando_lista_opt END .)
    ELSE            reduce using rule 25 (comando_composto -> BEGIN comando_lista_opt END .)


state 52

    (28) comando_lista -> comando_lista PONTOV . comando
    (30) comando -> . atribuicao
    (31) comando -> . chamada_procedimento
    (32) comando -> . condicional
    (33) comando -> . repeticao
    (34) comando -> . escrita
    (35) comando -> . leitura
    (36) comando -> . comando_composto
    (37) atribuicao -> . IDENTIFICADOR ATRIB expressao
    (38) chamada_procedimento -> . IDENTIFICADOR PARE lista_expressoes_opt PARD
    (39) condicional -> . IF expressao THEN comando
    (40) condicional -> . IF expressao THEN comando ELSE comando
    (41) repeticao -> . WHILE expressao DO comando
    (42) escrita -> . WRITE PARE lista_expressoes PARD
    (43) leitura -> . READ PARE lista_ids PARD
    (25) comando_composto -> . BEGIN comando_lista_opt END

    IDENTIFICADOR   shift and go to state 39
    IF              shift and go to state 40
    WHILE           shift and go to state 41
    WRITE           shift and go to state 42
    READ            shift and go to state 43
    BEGIN           shift and go to state 18

    comando                        shift and go to state 77
    atribuicao                     shift and go to state 32
    chamada_procedimento           shift and go to state 33
    condicional                    shift and go to state 34
    repeticao                      shift and go to state 35
    escrita                        shift and go to state 36
    leitura                        shift and go to state 37
    comando_composto               shift and go to state 38

state 53

    (37) atribuicao -> IDENTIFICADOR ATRIB . expressao
    (48) expressao -> . expressao_simples relacao expressao_simples
    (49) expressao -> . expressao_simples
    (56) expressao_simples -> . expressao_simples MAIS termo
    (57) expressao_simples -> . expressao_simples MENOS termo
    (58) expressao_simples -> . expressao_simples OR termo
    (59) expressao_simples -> . termo
    (60) termo -> . termo VEZES fator
    (61) termo -> . termo DIV fator
    (62) termo -> . termo AND fator
    (63) termo -> . fator
    (64) fator -> . variavel
    (65) fator -> . chamada_funcao
    (66) fator -> . NUMERO
    (67) fator -> . logico
    (68) fator -> . PARE expressao PARD
    (69) fator -> . NOT fator
    (70) fator -> . MENOS fator
    (73) variavel -> . IDENTIFICADOR
    (74) chamada_funcao -> . IDENTIFICADOR PARE lista_expressoes_opt PARD
    (71) logico -> . TRUE
    (72) logico -> . FALSE

    NUMERO          shift and go to state 62
    PARE            shift and go to state 64
    NOT             shift and go to state 65
    MENOS           shift and go to state 58
    IDENTIFICADOR   shift and go to state 66
    TRUE            shift and go to state 67
    FALSE           shift and go to state 68

    expressao                      shift and go to state 78
    expressao_simples              shift and go to state 56
    termo                          shift and go to state 57
    fator                          shift and go to state 59
    variavel                       shift and go to state 60
    chamada_funcao                 shift and go to state 61
    logico                         shift and go to state 63

state 54

    (38) chamada_procedimento -> IDENTIFICADOR PARE . lista_expressoes_opt PARD
    (44) lista_expressoes_opt -> . lista_expressoes
    (45) lista_expressoes_opt -> . empty
    (46) lista_expressoes -> . lista_expressoes VIRG expressao
    (47) lista_expressoes -> . expressao
    (75) empty -> .
    (48) expressao -> . expressao_simples relacao expressao_simples
    (49) expressao -> . expressao_simples
    (56) expressao_simples -> . expressao_simples MAIS termo
    (57) expressao_simples -> . expressao_simples MENOS termo
    (58) expressao_simples -> . expressao_simples OR termo
    (59) expressao_simples -> . termo
    (60) termo -> . termo VEZES fator
    (61) termo -> . termo DIV fator
    (62) termo -> . termo AND fator
    (63) termo -> . fator
    (64) fator -> . variavel
    (65) fator -> . chamada_funcao
    (66) fator -> . NUMERO
    (67) fator -> . logico
    (68) fator -> . PARE expressao PARD
    (69) fator -> . NOT fator
    (70) fator -> . MENOS fator
    (73) variavel -> . IDENTIFICADOR
    (74) chamada_funcao -> . IDENTIFICADOR PARE lista_expressoes_opt PARD
    (71) logico -> . TRUE
    (72) logico -> . FALSE

    PARD            reduce using rule 75 (empty -> .)
    NUMERO          shift and go to state 62
    PARE            shift and go to state 64
    NOT             shift and go to state 65
    MENOS           shift and go to state 58
    IDENTIFICADOR   shift and go to state 66
    TRUE            shift and go to state 67
    FALSE           shift and go to state 68

    lista_expressoes_opt           shift and go to state 79
    lista_expressoes               shift and go to state 80
    empty                          shift and go to state 81
    expressao                      shift and go to state 82
    expressao_simples              shift and go to state 56
    termo                          shift and go to state 57
    fator                          shift and go to state 59
    variavel                       shift and go to state 60
    chamada_funcao                 shift and go to state 61
    logico                         shift and go to state 63

state 55

    (39) condicional -> IF expressao . THEN comando
    (40) condicional -> IF expressao . THEN comando ELSE comando

    THEN            shift and go to state 83


state 56

    (48) expressao -> expressao_simples . relacao expressao_simples
    (49) expressao -> expressao_simples .
    (56) expressao_simples -> expressao_simples . MAIS termo
    (57) expressao_simples -> expressao_simples . MENOS termo
    (58) expressao_simples -> expressao_simples . OR termo
    (50) relacao -> . IGUAL
    (51) relacao -> . DIF
    (52) relacao -> . MENOR
    (53) relacao -> . MENORIG
    (54) relacao -> . MAIOR
    (55) relacao -> . MAIORIG

    THEN            reduce using rule 49 (expressao -> expressao_simples .)
    DO              reduce using rule 49 (expressao -> expressao_simples .)
    PONTOV          reduce using rule 49 (expressao -> expressao_simples .)
    END             reduce using rule 49 (expressao -> expressao_simples .)
    ELSE            reduce using rule 49 (expressao -> expressao_simples .)
    VIRG            reduce using rule 49 (expressao -> expressao_simples .)
    PARD            reduce using rule 49 (expressao -> expressao_simples .)
    MAIS            shift and go to state 85
    MENOS           shift and go to state 86
    OR              shift and go to state 87
    IGUAL           shift and go to state 88
    DIF             shift and go to state 89
    MENOR           shift and go to state 90
    MENORIG         shift and go to state 91
    MAIOR           shift and go to state 92
    MAIORIG         shift and go to state 93

    relacao                        shift and go to state 84

state 57

    (59) expressao_simples -> termo .
    (60) termo -> termo . VEZES fator
    (61) termo -> termo . DIV fator
    (62) termo -> termo . AND fator

    MAIS            reduce using rule 59 (expressao_simples -> termo .)
    MENOS           reduce using rule 59 (expressao_simples -> termo .)
    OR              reduce using rule 59 (expressao_simples -> termo .)
    IGUAL           reduce using rule 59 (expressao_simples -> termo .)
    DIF             reduce using rule 59 (expressao_simples -> termo .)
    MENOR           reduce using rule 59 (expressao_simples -> termo .)
    MENORIG         reduce using rule 59 (expressao_simples -> termo .)
    MAIOR           reduce using rule 59 (expressao_simples -> termo .)
    MAIORIG         reduce using rule 59 (expressao_simples -> termo .)
    THEN            reduce using rule 59 (expressao_simples -> termo .)
    DO              reduce using rule 59 (expressao_simples -> termo .)
    PONTOV          reduce using rule 59 (expressao_simples -> termo .)
    END             reduce using rule 59 (expressao_simples -> termo .)
    ELSE            reduce using rule 59 (expressao_simples -> termo .)
    VIRG            reduce using rule 59 (expressao_simples -> termo .)
    PARD            reduce using rule 59 (expressao_simples -> termo .)
    VEZES           shift and go to state 94
    DIV             shift and go to state 95
    AND             shift and go to state 96


state 58

    (70) fator -> MENOS . fator
    (64) fator -> . variavel
    (65) fator -> . chamada_funcao
    (66) fator -> . NUMERO
    (67) fator -> . logico
    (68) fator -> . PARE expressao PARD
    (69) fator -> . NOT fator
    (70) fator -> . MENOS fator
    (73) variavel -> . IDENTIFICADOR
    (74) chamada_funcao -> . IDENTIFICADOR PARE lista_expressoes_opt PARD
    (71) logico -> . TRUE
    (72) logico -> . FALSE

    NUMERO          shift and go to state 62
    PARE            shift and go to state 64
    NOT             shift and go to state 65
    MENOS           shift and go to state 58
    IDENTIFICADOR   shift and go to state 66
    TRUE            shift and go to state 67
    FALSE           shift and go to state 68

    fator                          shift and go to state 97
    variavel                       shift and go to state 60
    chamada_funcao                 shift and go to state 61
    logico                         shift and go to state 63

state 59

    (63) termo -> fator .
